CloudNative/202614-grupo5-proyecto/k8s/posts_app.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-db-deployment
  namespace: default
  labels:
    app: posts-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts-db
  template:
    metadata:
      labels:
        app: posts-db
    spec:
      containers:
        - name: posts-db
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: posts-db-volumen
              mountPath: /var/lib/postgresql/data
          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "posts_app", "-d", "posts_db"]
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            exec:
              command: ["pg_isready", "-U", "posts_app", "-d", "posts_db"]
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
      volumes:
        - name: posts-db-volumen
          emptyDir: {}

---

apiVersion: v1
kind: Service
metadata:
  name: posts-db-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: posts-db
  ports:
    - port: 5432
      targetPort: 5432

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-app-deployment
  namespace: default
  labels:
    app: posts-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts-app
  template:
    metadata:
      labels:
        app: posts-app
    spec:
      containers:
        - name: posts-app
          image: posts_app:v1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 30001
          readinessProbe:
            httpGet:
              path: /posts/ping
              port: 30001
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /posts/ping
              port: 30001
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi

---

apiVersion: v1
kind: Service
metadata:
  name: posts-app-service
  namespace: default
spec:
  type: NodePort
  selector:
    app: posts-app
  ports:
    - port: 80
      targetPort: 30001
      nodePort: 30001

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: posts-network
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: posts-db
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: posts-app
      ports:
        - protocol: TCP
          port: 5432
